refactoring mass collaboration slides

--- a/2020/materials/day5-mass-collaboration/01-mass-collaboration.tex
+++ b/2020/materials/day5-mass-collaboration/01-mass-collaboration.tex
@@ -4,15 +4,18 @@
 \usepackage{booktabs}
 \usepackage{framed}
 \usepackage{comment}
+\usepackage{ulem}
+
 \usepackage{hyperref}
 \hypersetup{
     colorlinks=true,
-    linkcolor=blue
+    linkcolor=blue,
+    filecolor=magenta,      
+    urlcolor=cyan,
 }
-\usepackage{ulem}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%
-\title[]{Introduction to mass collaboration}
+\title[]{[Introduction to mass collaboration]. [Human computation], [Open call], [Distributed data collection], [Fragile Families Challenge]}
 \author[]{Matthew J. Salganik\\Department of Sociology\\Princeton University}
 \date[]{%Summer Institutes in Computational Social Science\\2020
 %\vfill
@@ -114,82 +117,6 @@ Collaborators not cogs (ornithology and astronomy are examples)
 \begin{frame}
 
 An honest assessment: \pause As far as I can tell, most mass collaborations fail
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-\begin{itemize}
-\item \textcolor{blue}{Human computation}
-\item Open call
-\item Distributed data collection
-\end{itemize}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-\begin{itemize}
-\item Easy task, big scale
-\pause
-\item Humans better than computers
-\pause
-\item Can be combined with supervised learning 
-\pause
-\item Increasingly important as we move from numeric survey data to working with text, images, movies, audio, etc.
-\end{itemize}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-\begin{center}
-\only<1>{\includegraphics[width=\textwidth]{figures/benoit_crowd-sourced_2016_title}}
-\only<2>{\includegraphics[width=\textwidth]{figures/benoit_crowd-sourced_2016_abstract}}
-\end{center}
-
-\vfill
-{\tiny \url{http://dx.doi.org/10.1017/S0003055416000058}}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-Here's a piece of the manifesto of the Labor Party in the United Kingdom from 2010:
-
-\begin{quote}
-``Millions of people working in our public services embody the best values of Britain, helping empower people to make the most of their own lives while protecting them from the risks they should not have to bear on their own. Just as we need to be bolder about the role of government in making markets work fairly, we also need to be bold reformers of government.''
-\end{quote}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-\begin{center}
-\only<1>{\includegraphics[width=\textwidth]{figures/benoit_crowd-sourced_2016_fig1}}
-\only<2>{\includegraphics[width=\textwidth]{figures/benoit_crowd-sourced_2016_fig3}}
-\end{center}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-What I like about Benoit et al (2016)
-\begin{itemize}
-\item Better not cheaper
-\pause
-\item Experts are a bug not a feature
-\end{itemize}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-{\Large
-\begin{center}
-Questions?
-\end{center}
-}
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%
