--- a/2020/materials/day5-mass-collaboration/01-mass-collaboration.tex
+++ b/2020/materials/day5-mass-collaboration/01-mass-collaboration.tex
@@ -15,7 +15,7 @@
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%
-\title[]{[Introduction to mass collaboration]. [Human computation], [Open call], [Distributed data collection], [Fragile Families Challenge]}
+\title[]{[Introduction to mass collaboration]\textcolor{gray}{, [Human computation], [Open call], [Distributed data collection], \newline [Fragile Families Challenge]}}
 \author[]{Matthew J. Salganik\\Department of Sociology\\Princeton University}
 \date[]{%Summer Institutes in Computational Social Science\\2020
 %\vfill
@@ -114,147 +114,7 @@ Collaborators not cogs (ornithology and astronomy are examples)
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-An honest assessment: \pause As far as I can tell, most mass collaborations fail
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-\begin{itemize}
-\item Human computation
-\item \textcolor{blue}{Open call}
-\item Distributed data collection
-\end{itemize}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-\begin{center}
-\includegraphics[width=0.3\textwidth]{figures/sobel_longitude_2007_cover}
-\end{center}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-{\Large
-\begin{center}
-Solutions are easier to check than to generate
-\end{center}
-}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-{\Large
-\begin{center}
-You will participate in an open call in a few moments
-\end{center}
-}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-{\Large
-\begin{center}
-Questions? 
-\end{center}
-}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-\begin{itemize}
-\item Human computation
-\item Open call
-\item \textcolor{blue}{Distributed data collection}
-\end{itemize}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-\begin{itemize}
-\item people can be where the researchers can't
-\pause
-\item scale that researcher cannot match
-\pause
-\item sometimes hard to separate from human computation
-\end{itemize}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-\begin{center}
-\includegraphics[width=0.6\textwidth]{figures/photocity_logo}
-\end{center}
-
-\small{
-Tuite et al. (2011) ``PhotoCity: Training Experts at Large-scale Image Acquisition Through a Competitive Game'' \textit{CHI}:  \url{http://dx.doi.org/10.1145/1978942.1979146}
-}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-\begin{center}
-\includegraphics[width=0.6\textwidth]{figures/rome_in_a_day}
-\end{center}
-Rome in a Day (Agarwal et al., 2009)
-
-\end{frame}
-%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-\begin{center}
-\includegraphics[width=0.6\textwidth]{figures/tuite_photocity_2011_fig2}
-\end{center}
-
-Two campuses: University of Washington and Cornell University
-
-\end{frame}
-%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-Over 2 months, 100,000 photos submitted by 45 players
-\vfill
-\begin{center}
-\includegraphics[width=0.9\textwidth]{figures/tuite_photocity_2011_fig8}
-\end{center}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{PhotoCity}
-
-Beautiful design solves lots of problems
-\pause
-\begin{itemize}
-\item data collection is standardized because of cameras
-\pause
-\item verification is automatic by comparison with nearby images
-\pause
-\item game points are assigned based on the value of data, trains people to collect more valuable data
-\end{itemize}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-{\Large
-\begin{center}
-Questions about distributed data collection or mass collaboration?
-\end{center}
-}
-
-\end{frame}
+\frame{\titlepage}
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \end{document}
