clean up before recording

--- a/2020/materials/day5-mass-collaboration/02-human_computation.tex
+++ b/2020/materials/day5-mass-collaboration/02-human_computation.tex
@@ -100,7 +100,7 @@ Astronomers are interested in understanding the relationship between the shape a
 \begin{frame}
 \frametitle{Galaxy Zoo}
 
-Needed hand-classified galaxies so Schwaninski worked seven, 12 hour days to classify 50,000 galaxies
+Needed hand-classified galaxies so Schawninski worked seven, 12 hour days to classify 50,000 galaxies
 \begin{center}
 \fbox{\includegraphics[width=\textwidth]{figures/schawinski_paper_2007}}
 \end{center}
@@ -259,7 +259,7 @@ Wrapping up:
 
 What to read next:
 \begin{itemize}
-\item \href{https://dl.acm.org/doi/book/10.5555/2049960}{\textit{Human computation}} (Law and von Ahn, 2011))
+\item \href{https://dl.acm.org/doi/book/10.5555/2049960}{\textit{Human computation}} (Law and von Ahn, 2011)
 \item \href{https://dx.doi.org/10.1126/science.1160379}{reCAPTCHA} (von Ahn et al.\ 2008) 
 \item Background about Amazon Mechanical Turk: \href{https://dx.doi.org/10.1126/science.352.6291.1263}{Bohannon 2016}
 \end{itemize}
