tweaks to ffc slides

--- a/2020/materials/day5-mass-collaboration/05-ffchallenge.tex
+++ b/2020/materials/day5-mass-collaboration/05-ffchallenge.tex
@@ -216,7 +216,7 @@ We should care about the predictability of social outcomes\pause
 \begin{itemize}
 \item Scientific reasons \pause
 \begin{itemize}
-\item Basic social fact
+\item Basic social fact \pause
 \item Discovery \pause
 \end{itemize}
 \item Policy reasons
